@@ -1,4 +1,4 @@
-package com.susen36.caerulaarbor.client.overlay;
+package com.susen36.caerulaarbor.client.overlay.skillbar;
 
 import com.susen36.caerulaarbor.CaerulaArbor;
 import com.susen36.caerulaarbor.entity.SkadiCorruptedEntity;
@@ -34,48 +34,40 @@ public class CorruptedBarOverlay {
 			y = entity.getY();
 			z = entity.getZ();
 		}
+        double fx = x;
+        double fy = y;
+        double fz = z;
         boolean result1 = false;
         Entity corrupted1;
-        corrupted1 = world.getEntitiesOfClass(SkadiCorruptedEntity.class, AABB.ofSize(new Vec3(x, y, z), 48, 48, 48), e1 -> true).stream().sorted(new Object() {
-            Comparator<Entity> compareDistOf(double x, double y, double z) {
-                return Comparator.comparingDouble(entity -> entity.distanceToSqr(x, y, z));
-            }
-        }.compareDistOf(x, y, z)).findFirst().orElse(null);
+        corrupted1 = world.getEntitiesOfClass(SkadiCorruptedEntity.class, AABB.ofSize(new Vec3(fx, fy, fz), 48, 48, 48), e1 -> true)
+                .stream().min(Comparator.<Entity>comparingDouble(entcnd -> entcnd.distanceToSqr(fx, fy, fz))).orElse(null);
         if (corrupted1 != null) {
             result1 = (corrupted1 instanceof SkadiCorruptedEntity datEntI1 ? datEntI1.getEntityData().get(SkadiCorruptedEntity.DATA_PHASE) : 0) < 1.5;
         }
         if (result1) {
-
             double result2 = 0;
-            Entity corrupted2;
+            SkadiCorruptedEntity corrupted2;
             double convertP;
             double phase;
             double progress = 0;
-            corrupted2 = world.getEntitiesOfClass(SkadiCorruptedEntity.class, AABB.ofSize(new Vec3(x, y, z), 48, 48, 48), e1 -> true).stream().sorted(new Object() {
-                Comparator<Entity> compareDistOf(double x, double y, double z) {
-                    return Comparator.comparingDouble(entity -> entity.distanceToSqr(x, y, z));
-                }
-            }.compareDistOf(x, y, z)).findFirst().orElse(null);
+            corrupted2 = world.getEntitiesOfClass(SkadiCorruptedEntity.class, AABB.ofSize(new Vec3(fx, fy, fz), 48, 48, 48), e1 -> true)
+                    .stream().min(Comparator.comparingDouble(entcnd -> entcnd.distanceToSqr(fx, fy, fz))).orElse(null);
             if (corrupted2 != null) {
-                convertP = corrupted2 instanceof SkadiCorruptedEntity datEntI1 ? datEntI1.getEntityData().get(SkadiCorruptedEntity.DATA_CONVERT_P) : 0;
-                phase = corrupted2 instanceof SkadiCorruptedEntity datEntI1 ? datEntI1.getEntityData().get(SkadiCorruptedEntity.DATA_PHASE) : 0;
+                convertP = corrupted2.getEntityData().get(SkadiCorruptedEntity.DATA_CONVERT_P);
+                phase = corrupted2.getEntityData().get(SkadiCorruptedEntity.DATA_PHASE);
                 if (phase < 0.5) {
                     progress = (900 - convertP) / (double) 900;
                 } else if (phase < 1.5) {
                     progress = (1120 - convertP) / (double) 1120;
                 }
-                result2 = Math.max(0, Math.min(Math.round(50 * progress), 50));
+                result2 = Math.clamp(Math.round(50 * progress), 0, 50);
             }
             event.getGuiGraphics().blit(ResourceLocation.fromNamespaceAndPath(CaerulaArbor.MODID, "textures/overlay/corrupted_bar_inner.png"), 28, h / 2 + -42, Mth.clamp((int) result2 * 2, 0, 100), 0, 2, 88, 102, 88);
 
             double result = 0;
             Entity corrupted;
             double P;
-            corrupted = world.getEntitiesOfClass(SkadiCorruptedEntity.class, AABB.ofSize(new Vec3(x, y, z), 48, 48, 48), e -> true).stream().min(new Object() {
-                Comparator<Entity> compareDistOf(double x, double y, double z) {
-                    return Comparator.comparingDouble(entity -> entity.distanceToSqr(x, y, z));
-                }
-            }.compareDistOf(x, y, z)).orElse(null);
+            corrupted = world.getEntitiesOfClass(SkadiCorruptedEntity.class, AABB.ofSize(new Vec3(fx, fy, fz), 48, 48, 48), e -> true).stream().min(Comparator.<Entity>comparingDouble(entcnd -> entcnd.distanceToSqr(fx, fy, fz))).orElse(null);
             if (corrupted != null) {
                 P = corrupted instanceof SkadiCorruptedEntity datEntI ? datEntI.getEntityData().get(SkadiCorruptedEntity.DATA_PHASE) : 0;
                 if (!(P < 0.5)) {
@@ -85,7 +77,6 @@ public class CorruptedBarOverlay {
                 }
             }
             event.getGuiGraphics().blit(ResourceLocation.fromNamespaceAndPath(CaerulaArbor.MODID, "textures/overlay/corrupted_bar.png"), 25, h / 2 + -48, 0, Mth.clamp((int) result * 99, 0, 99), 8, 99, 8, 198);
-
 		}
 	}
 }
